<resources>
    <string name="app_name">RecycleRush</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="materialHeader">TextView</string>
    <string name="Material">Enter barcode</string>
    <string name="editText1">EditText</string>
    <string name="button1">Button</string>
    <string name="button12">Button</string>
    <string name="editText2">EditText</string>
    <string name="editText3">EditText</string>
    <string name="buttonBar">Button</string>

    <string name="buttonTextInput">Button</string>
    <string name="username">TextView</string>
    <string name="points">TextView</string>
    <string name="points_profile">TextView</string>
    <string name="userprofilepicture">UserProfilePicture</string>
    <string name="usericon">UserIcon</string>
    <string name="full_oak">full_oak</string>
    <string name="UserName">name</string>
    <string name="Score">score</string>
    <string name="Place">place</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="camera_button">camera_button</string>
    <string name="splashscreen">splashscreen</string>
    <string name="hello_world_splash">Hello World, splash</string>

</resources>
