<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#009446"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewPlace"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight=".10"
        android:text="@string/Place"
        android:textColor="#FFFFFF"
        android:textAlignment="textStart"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight=".70"
        android:text="@string/UserName"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight=".20"
        android:text="@string/Score"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="#FFFFFF" />
</LinearLayout>